data/test/type_check/fail/issue_20b.v
wire x[3:1];
// Too many subscripts
assign x[0][0][0] = 1;
